fix(web-tablet): overflowing sidebar

--- a/styles/web/sass/ui_resources/atlas_ui_resources/layouts/_layout-atlas-responsive.scss
+++ b/styles/web/sass/ui_resources/atlas_ui_resources/layouts/_layout-atlas-responsive.scss
@@ -109,7 +109,7 @@
 // Fix Safari issue of sidebar disappearing
 .profile-tablet {
     .mx-scrollcontainer:not(.mx-scrollcontainer-open) > .region-sidebar {
-        overflow-y: auto;
+        overflow-y: hidden;
 
         .mx-scrollcontainer-wrapper {
             overflow: visible;
